docs/upbound-provider-aws/1.6/apigateway/v1beta1/stage.md
---
permalink: /upbound-provider-aws/1.6/apigateway/v1beta1/stage/
---

# apigateway.v1beta1.stage

"Stage is the Schema for the Stages API. Manages an API Gateway Stage."

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withAccessLogSettings(accessLogSettings)`](#fn-specforproviderwithaccesslogsettings)
    * [`fn withAccessLogSettingsMixin(accessLogSettings)`](#fn-specforproviderwithaccesslogsettingsmixin)
    * [`fn withCacheClusterEnabled(cacheClusterEnabled)`](#fn-specforproviderwithcacheclusterenabled)
    * [`fn withCacheClusterSize(cacheClusterSize)`](#fn-specforproviderwithcacheclustersize)
    * [`fn withCanarySettings(canarySettings)`](#fn-specforproviderwithcanarysettings)
    * [`fn withCanarySettingsMixin(canarySettings)`](#fn-specforproviderwithcanarysettingsmixin)
    * [`fn withClientCertificateId(clientCertificateId)`](#fn-specforproviderwithclientcertificateid)
    * [`fn withDeploymentId(deploymentId)`](#fn-specforproviderwithdeploymentid)
    * [`fn withDescription(description)`](#fn-specforproviderwithdescription)
    * [`fn withDocumentationVersion(documentationVersion)`](#fn-specforproviderwithdocumentationversion)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withRestApiId(restApiId)`](#fn-specforproviderwithrestapiid)
    * [`fn withStageName(stageName)`](#fn-specforproviderwithstagename)
    * [`fn withTags(tags)`](#fn-specforproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specforproviderwithtagsmixin)
    * [`fn withVariables(variables)`](#fn-specforproviderwithvariables)
    * [`fn withVariablesMixin(variables)`](#fn-specforproviderwithvariablesmixin)
    * [`fn withXrayTracingEnabled(xrayTracingEnabled)`](#fn-specforproviderwithxraytracingenabled)
    * [`obj spec.forProvider.accessLogSettings`](#obj-specforprovideraccesslogsettings)
      * [`fn withDestinationArn(destinationArn)`](#fn-specforprovideraccesslogsettingswithdestinationarn)
      * [`fn withFormat(format)`](#fn-specforprovideraccesslogsettingswithformat)
    * [`obj spec.forProvider.canarySettings`](#obj-specforprovidercanarysettings)
      * [`fn withPercentTraffic(percentTraffic)`](#fn-specforprovidercanarysettingswithpercenttraffic)
      * [`fn withStageVariableOverrides(stageVariableOverrides)`](#fn-specforprovidercanarysettingswithstagevariableoverrides)
      * [`fn withStageVariableOverridesMixin(stageVariableOverrides)`](#fn-specforprovidercanarysettingswithstagevariableoverridesmixin)
      * [`fn withUseStageCache(useStageCache)`](#fn-specforprovidercanarysettingswithusestagecache)
    * [`obj spec.forProvider.deploymentIdRef`](#obj-specforproviderdeploymentidref)
      * [`fn withName(name)`](#fn-specforproviderdeploymentidrefwithname)
      * [`obj spec.forProvider.deploymentIdRef.policy`](#obj-specforproviderdeploymentidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdeploymentidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdeploymentidrefpolicywithresolve)
    * [`obj spec.forProvider.deploymentIdSelector`](#obj-specforproviderdeploymentidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderdeploymentidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderdeploymentidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderdeploymentidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.deploymentIdSelector.policy`](#obj-specforproviderdeploymentidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderdeploymentidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderdeploymentidselectorpolicywithresolve)
    * [`obj spec.forProvider.restApiIdRef`](#obj-specforproviderrestapiidref)
      * [`fn withName(name)`](#fn-specforproviderrestapiidrefwithname)
      * [`obj spec.forProvider.restApiIdRef.policy`](#obj-specforproviderrestapiidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrestapiidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrestapiidrefpolicywithresolve)
    * [`obj spec.forProvider.restApiIdSelector`](#obj-specforproviderrestapiidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderrestapiidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderrestapiidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderrestapiidselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.restApiIdSelector.policy`](#obj-specforproviderrestapiidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderrestapiidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderrestapiidselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withAccessLogSettings(accessLogSettings)`](#fn-specinitproviderwithaccesslogsettings)
    * [`fn withAccessLogSettingsMixin(accessLogSettings)`](#fn-specinitproviderwithaccesslogsettingsmixin)
    * [`fn withCacheClusterEnabled(cacheClusterEnabled)`](#fn-specinitproviderwithcacheclusterenabled)
    * [`fn withCacheClusterSize(cacheClusterSize)`](#fn-specinitproviderwithcacheclustersize)
    * [`fn withCanarySettings(canarySettings)`](#fn-specinitproviderwithcanarysettings)
    * [`fn withCanarySettingsMixin(canarySettings)`](#fn-specinitproviderwithcanarysettingsmixin)
    * [`fn withClientCertificateId(clientCertificateId)`](#fn-specinitproviderwithclientcertificateid)
    * [`fn withDeploymentId(deploymentId)`](#fn-specinitproviderwithdeploymentid)
    * [`fn withDescription(description)`](#fn-specinitproviderwithdescription)
    * [`fn withDocumentationVersion(documentationVersion)`](#fn-specinitproviderwithdocumentationversion)
    * [`fn withRestApiId(restApiId)`](#fn-specinitproviderwithrestapiid)
    * [`fn withStageName(stageName)`](#fn-specinitproviderwithstagename)
    * [`fn withTags(tags)`](#fn-specinitproviderwithtags)
    * [`fn withTagsMixin(tags)`](#fn-specinitproviderwithtagsmixin)
    * [`fn withVariables(variables)`](#fn-specinitproviderwithvariables)
    * [`fn withVariablesMixin(variables)`](#fn-specinitproviderwithvariablesmixin)
    * [`fn withXrayTracingEnabled(xrayTracingEnabled)`](#fn-specinitproviderwithxraytracingenabled)
    * [`obj spec.initProvider.accessLogSettings`](#obj-specinitprovideraccesslogsettings)
      * [`fn withDestinationArn(destinationArn)`](#fn-specinitprovideraccesslogsettingswithdestinationarn)
      * [`fn withFormat(format)`](#fn-specinitprovideraccesslogsettingswithformat)
    * [`obj spec.initProvider.canarySettings`](#obj-specinitprovidercanarysettings)
      * [`fn withPercentTraffic(percentTraffic)`](#fn-specinitprovidercanarysettingswithpercenttraffic)
      * [`fn withStageVariableOverrides(stageVariableOverrides)`](#fn-specinitprovidercanarysettingswithstagevariableoverrides)
      * [`fn withStageVariableOverridesMixin(stageVariableOverrides)`](#fn-specinitprovidercanarysettingswithstagevariableoverridesmixin)
      * [`fn withUseStageCache(useStageCache)`](#fn-specinitprovidercanarysettingswithusestagecache)
    * [`obj spec.initProvider.deploymentIdRef`](#obj-specinitproviderdeploymentidref)
      * [`fn withName(name)`](#fn-specinitproviderdeploymentidrefwithname)
      * [`obj spec.initProvider.deploymentIdRef.policy`](#obj-specinitproviderdeploymentidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdeploymentidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdeploymentidrefpolicywithresolve)
    * [`obj spec.initProvider.deploymentIdSelector`](#obj-specinitproviderdeploymentidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderdeploymentidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderdeploymentidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderdeploymentidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.deploymentIdSelector.policy`](#obj-specinitproviderdeploymentidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderdeploymentidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderdeploymentidselectorpolicywithresolve)
    * [`obj spec.initProvider.restApiIdRef`](#obj-specinitproviderrestapiidref)
      * [`fn withName(name)`](#fn-specinitproviderrestapiidrefwithname)
      * [`obj spec.initProvider.restApiIdRef.policy`](#obj-specinitproviderrestapiidrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderrestapiidrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderrestapiidrefpolicywithresolve)
    * [`obj spec.initProvider.restApiIdSelector`](#obj-specinitproviderrestapiidselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderrestapiidselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderrestapiidselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderrestapiidselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.restApiIdSelector.policy`](#obj-specinitproviderrestapiidselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderrestapiidselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderrestapiidselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of Stage

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"StageSpec defines the desired state of Stage"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withAccessLogSettings

```ts
withAccessLogSettings(accessLogSettings)
```

"Enables access logs for the API stage. See Access Log Settings below."

### fn spec.forProvider.withAccessLogSettingsMixin

```ts
withAccessLogSettingsMixin(accessLogSettings)
```

"Enables access logs for the API stage. See Access Log Settings below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withCacheClusterEnabled

```ts
withCacheClusterEnabled(cacheClusterEnabled)
```

"Whether a cache cluster is enabled for the stage"

### fn spec.forProvider.withCacheClusterSize

```ts
withCacheClusterSize(cacheClusterSize)
```

"Size of the cache cluster for the stage, if enabled. Allowed values include 0.5, 1.6, 6.1, 13.5, 28.4, 58.2, 118 and 237."

### fn spec.forProvider.withCanarySettings

```ts
withCanarySettings(canarySettings)
```

"Configuration settings of a canary deployment. See Canary Settings below."

### fn spec.forProvider.withCanarySettingsMixin

```ts
withCanarySettingsMixin(canarySettings)
```

"Configuration settings of a canary deployment. See Canary Settings below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withClientCertificateId

```ts
withClientCertificateId(clientCertificateId)
```

"Identifier of a client certificate for the stage."

### fn spec.forProvider.withDeploymentId

```ts
withDeploymentId(deploymentId)
```

"ID of the deployment that the stage points to"

### fn spec.forProvider.withDescription

```ts
withDescription(description)
```

"Description of the stage."

### fn spec.forProvider.withDocumentationVersion

```ts
withDocumentationVersion(documentationVersion)
```

"Version of the associated API documentation"

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withRestApiId

```ts
withRestApiId(restApiId)
```

"ID of the associated REST API"

### fn spec.forProvider.withStageName

```ts
withStageName(stageName)
```

"Name of the stage"

### fn spec.forProvider.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.forProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withVariables

```ts
withVariables(variables)
```

"Map that defines the stage variables"

### fn spec.forProvider.withVariablesMixin

```ts
withVariablesMixin(variables)
```

"Map that defines the stage variables"

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withXrayTracingEnabled

```ts
withXrayTracingEnabled(xrayTracingEnabled)
```

"Whether active tracing with X-ray is enabled. Defaults to false."

## obj spec.forProvider.accessLogSettings

"Enables access logs for the API stage. See Access Log Settings below."

### fn spec.forProvider.accessLogSettings.withDestinationArn

```ts
withDestinationArn(destinationArn)
```

"ARN of the CloudWatch Logs log group or Kinesis Data Firehose delivery stream to receive access logs. If you specify a Kinesis Data Firehose delivery stream, the stream name must begin with amazon-apigateway-. Automatically removes trailing :* if present."

### fn spec.forProvider.accessLogSettings.withFormat

```ts
withFormat(format)
```

"Formatting and values recorded in the logs.\nFor more information on configuring the log format rules visit the AWS documentation"

## obj spec.forProvider.canarySettings

"Configuration settings of a canary deployment. See Canary Settings below."

### fn spec.forProvider.canarySettings.withPercentTraffic

```ts
withPercentTraffic(percentTraffic)
```

"Percent 0.0 - 100.0 of traffic to divert to the canary deployment."

### fn spec.forProvider.canarySettings.withStageVariableOverrides

```ts
withStageVariableOverrides(stageVariableOverrides)
```

"Map of overridden stage variables (including new variables) for the canary deployment."

### fn spec.forProvider.canarySettings.withStageVariableOverridesMixin

```ts
withStageVariableOverridesMixin(stageVariableOverrides)
```

"Map of overridden stage variables (including new variables) for the canary deployment."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.canarySettings.withUseStageCache

```ts
withUseStageCache(useStageCache)
```

"Whether the canary deployment uses the stage cache. Defaults to false."

## obj spec.forProvider.deploymentIdRef

"Reference to a Deployment in apigateway to populate deploymentId."

### fn spec.forProvider.deploymentIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.deploymentIdRef.policy

"Policies for referencing."

### fn spec.forProvider.deploymentIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.deploymentIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.deploymentIdSelector

"Selector for a Deployment in apigateway to populate deploymentId."

### fn spec.forProvider.deploymentIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.deploymentIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.deploymentIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.deploymentIdSelector.policy

"Policies for selection."

### fn spec.forProvider.deploymentIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.deploymentIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.restApiIdRef

"Reference to a RestAPI in apigateway to populate restApiId."

### fn spec.forProvider.restApiIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.restApiIdRef.policy

"Policies for referencing."

### fn spec.forProvider.restApiIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.restApiIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.restApiIdSelector

"Selector for a RestAPI in apigateway to populate restApiId."

### fn spec.forProvider.restApiIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.restApiIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.restApiIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.restApiIdSelector.policy

"Policies for selection."

### fn spec.forProvider.restApiIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.restApiIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withAccessLogSettings

```ts
withAccessLogSettings(accessLogSettings)
```

"Enables access logs for the API stage. See Access Log Settings below."

### fn spec.initProvider.withAccessLogSettingsMixin

```ts
withAccessLogSettingsMixin(accessLogSettings)
```

"Enables access logs for the API stage. See Access Log Settings below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withCacheClusterEnabled

```ts
withCacheClusterEnabled(cacheClusterEnabled)
```

"Whether a cache cluster is enabled for the stage"

### fn spec.initProvider.withCacheClusterSize

```ts
withCacheClusterSize(cacheClusterSize)
```

"Size of the cache cluster for the stage, if enabled. Allowed values include 0.5, 1.6, 6.1, 13.5, 28.4, 58.2, 118 and 237."

### fn spec.initProvider.withCanarySettings

```ts
withCanarySettings(canarySettings)
```

"Configuration settings of a canary deployment. See Canary Settings below."

### fn spec.initProvider.withCanarySettingsMixin

```ts
withCanarySettingsMixin(canarySettings)
```

"Configuration settings of a canary deployment. See Canary Settings below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withClientCertificateId

```ts
withClientCertificateId(clientCertificateId)
```

"Identifier of a client certificate for the stage."

### fn spec.initProvider.withDeploymentId

```ts
withDeploymentId(deploymentId)
```

"ID of the deployment that the stage points to"

### fn spec.initProvider.withDescription

```ts
withDescription(description)
```

"Description of the stage."

### fn spec.initProvider.withDocumentationVersion

```ts
withDocumentationVersion(documentationVersion)
```

"Version of the associated API documentation"

### fn spec.initProvider.withRestApiId

```ts
withRestApiId(restApiId)
```

"ID of the associated REST API"

### fn spec.initProvider.withStageName

```ts
withStageName(stageName)
```

"Name of the stage"

### fn spec.initProvider.withTags

```ts
withTags(tags)
```

"Key-value map of resource tags."

### fn spec.initProvider.withTagsMixin

```ts
withTagsMixin(tags)
```

"Key-value map of resource tags."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withVariables

```ts
withVariables(variables)
```

"Map that defines the stage variables"

### fn spec.initProvider.withVariablesMixin

```ts
withVariablesMixin(variables)
```

"Map that defines the stage variables"

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withXrayTracingEnabled

```ts
withXrayTracingEnabled(xrayTracingEnabled)
```

"Whether active tracing with X-ray is enabled. Defaults to false."

## obj spec.initProvider.accessLogSettings

"Enables access logs for the API stage. See Access Log Settings below."

### fn spec.initProvider.accessLogSettings.withDestinationArn

```ts
withDestinationArn(destinationArn)
```

"ARN of the CloudWatch Logs log group or Kinesis Data Firehose delivery stream to receive access logs. If you specify a Kinesis Data Firehose delivery stream, the stream name must begin with amazon-apigateway-. Automatically removes trailing :* if present."

### fn spec.initProvider.accessLogSettings.withFormat

```ts
withFormat(format)
```

"Formatting and values recorded in the logs.\nFor more information on configuring the log format rules visit the AWS documentation"

## obj spec.initProvider.canarySettings

"Configuration settings of a canary deployment. See Canary Settings below."

### fn spec.initProvider.canarySettings.withPercentTraffic

```ts
withPercentTraffic(percentTraffic)
```

"Percent 0.0 - 100.0 of traffic to divert to the canary deployment."

### fn spec.initProvider.canarySettings.withStageVariableOverrides

```ts
withStageVariableOverrides(stageVariableOverrides)
```

"Map of overridden stage variables (including new variables) for the canary deployment."

### fn spec.initProvider.canarySettings.withStageVariableOverridesMixin

```ts
withStageVariableOverridesMixin(stageVariableOverrides)
```

"Map of overridden stage variables (including new variables) for the canary deployment."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.canarySettings.withUseStageCache

```ts
withUseStageCache(useStageCache)
```

"Whether the canary deployment uses the stage cache. Defaults to false."

## obj spec.initProvider.deploymentIdRef

"Reference to a Deployment in apigateway to populate deploymentId."

### fn spec.initProvider.deploymentIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.deploymentIdRef.policy

"Policies for referencing."

### fn spec.initProvider.deploymentIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.deploymentIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.deploymentIdSelector

"Selector for a Deployment in apigateway to populate deploymentId."

### fn spec.initProvider.deploymentIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.deploymentIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.deploymentIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.deploymentIdSelector.policy

"Policies for selection."

### fn spec.initProvider.deploymentIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.deploymentIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.restApiIdRef

"Reference to a RestAPI in apigateway to populate restApiId."

### fn spec.initProvider.restApiIdRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.restApiIdRef.policy

"Policies for referencing."

### fn spec.initProvider.restApiIdRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.restApiIdRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.restApiIdSelector

"Selector for a RestAPI in apigateway to populate restApiId."

### fn spec.initProvider.restApiIdSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.restApiIdSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.restApiIdSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.restApiIdSelector.policy

"Policies for selection."

### fn spec.initProvider.restApiIdSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.restApiIdSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."